# gno

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Decreto_412.txt  HONESTY.md  arkhe_catalog.vot  arkhe_source_catalog.json  deny.toml  docker-compose.prod.yml  docker-compose.yml  fix.patch  fix.sh  fix2.sh  fix_errors.sh  fix_errors_2.sh  fix_errors_3.sh  fix_errors_4.sh  fix_errors_5.sh  fix_router.py  fix_router2.py  opencode.json  package-lock.json  package.json  patch_metrics.py  patch_router.py  plan.md  save_files.py  sindy_v120_stls_discovery.json  source_catalog_api.py  source_catalog_engine.py  test_cli.py
bridge/: Cargo.toml
bridge/src/: main.rs
cathedral-33t/: Cargo.toml  README.md
cathedral-33t/.github/workflows/: ci.yml
cathedral-33t/cross/: Dockerfile.android  Dockerfile.ios  Dockerfile.windows
cathedral-33t/docs/: api.md  architecture.md  multiplatform.md
cathedral-33t/mobile/ios/: CathedralEngine.swift
cathedral-33t/scripts/: build_android.sh  build_ios.sh  build_macos.sh  build_windows.bat
cathedral-33t/src/: config.rs  lib.rs  platform.rs  tensor.rs
cathedral-33t/src/attention/: csa.rs  hca.rs  mla.rs  mod.rs  rope.rs  sliding_window.rs
cathedral-33t/src/consistency/: engine.rs
cathedral-33t/src/mhc/: mod.rs
cathedral-33t/src/moe/: expert.rs  load_balancer.rs  mod.rs  router.rs
cathedral-33t/src/optimizer/: mona.rs
cathedral-33t/src/placement/: hybrid_ep.rs  mod.rs  occult.rs
cathedral-33t/src/routing/: anticipatory.rs
cathedral-33t/src/speculative/: eagle3.rs  mod.rs
cathedral-33t/src/ssm/: mamba.rs
cathedral-33t/src/swarm/: consensus.rs  coordinator.rs  mod.rs
cathedral-33t/src/symbolic/: mod.rs  reasoner.rs
cathedral-33t/src/utils/: math.rs
cathedral-33t/tests/: test_moe.rs
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/.github/workflows/: github_actions_prove.yml
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: threshold_mobile_app.py
cathedral-agi-omega/INFRASTRUCTURE/ci_cd/: github_actions_prove.yml  reject_unproven.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py
cathedral-arkhe/: .gitignore  AUTHORS  Cargo.toml  justfile  pyproject.toml
cathedral-arkhe/.cargo/: config.toml
cathedral-arkhe/.github/workflows/: publish.yml  test.yml
cathedral-arkhe/cathedral/: __init__.py  _config.py  _version.py  constants.py  types.py
cathedral-arkhe/cathedral/orchestrator/: __init__.py  factory.py  v5.py  v5_1.py  v5_1_onchain.py
cathedral-arkhe/config/plugins/: kleros.yaml  lora.yaml  onchain.yaml
cathedral-arkhe/crates/cathedral-agi/: Cargo.toml
cathedral-arkhe/crates/cathedral-atlassian/: Cargo.toml
cathedral-arkhe/crates/cathedral-bridge/: Cargo.toml
cathedral-arkhe/crates/cathedral-cem/: Cargo.toml
cathedral-arkhe/crates/cathedral-contextual-amplification/: Cargo.toml
cathedral-arkhe/crates/cathedral-core/: Cargo.toml
cathedral-arkhe/crates/cathedral-edge-agent/: Cargo.toml
cathedral-arkhe/crates/cathedral-episodic/: Cargo.toml
cathedral-arkhe/crates/cathedral-ethical-certification/: Cargo.toml
cathedral-arkhe/crates/cathedral-fallback/: Cargo.toml
cathedral-arkhe/crates/cathedral-hashtree/: Cargo.toml
cathedral-arkhe/crates/cathedral-kernel-zk/: Cargo.toml
cathedral-arkhe/crates/cathedral-lc3-vm/: Cargo.toml
cathedral-arkhe/crates/cathedral-nostr/: Cargo.toml
cathedral-arkhe/crates/cathedral-observer-5d/: Cargo.toml
cathedral-arkhe/crates/cathedral-plurality/: Cargo.toml
cathedral-arkhe/crates/cathedral-sail-pipeline/: Cargo.toml
cathedral-arkhe/crates/cathedral-scheduler/: Cargo.toml
cathedral-arkhe/crates/cathedral-sdk/: Cargo.toml
cathedral-arkhe/crates/cathedral-shard-controller/: Cargo.toml
cathedral-arkhe/crates/cathedral-tee/: Cargo.toml
cathedral-arkhe/crates/cathedral-test-utils/: Cargo.toml
cathedral-arkhe/crates/cathedral-wormgraph/: Cargo.toml
cathedral-arkhe/crates/cathedral-x402-gateway/: Cargo.toml
cathedral-arkhe/crates/cathedral-xtask/: Cargo.toml
cathedral-arkhe/crates/cathedral-zk-circuits/: Cargo.toml
cathedral-arkhe/crates/cathedral-zk-risc0/: Cargo.toml
cathedral-arkhe/docs/: index.md
cathedral-arkhe/docs/guides/: zkml-setup.md
cathedral-arkhe/docs/substrates/: 1091-vector-theosis.md
cathedral-arkhe/examples/: full_orchestration.py  interactive_monitor.py
cathedral-arkhe/models/: README.md
cathedral-arkhe/tests/: test_vector_theosis.py
cathedral-arkhe/ui/: package-lock.json  package.json
cathedral-arkhe/ui/hooks/: use-sse.ts
cathedral-arkhe/ui/lib/: store.ts
cathedral-cse/: Cargo.toml
cathedral-cse/src/: lib.rs  main.rs
cathedral-cse/src/agent/: cca_v2.rs  mod.rs
cathedral-cse/src/attention/: mod.rs  spatial.rs
cathedral-cse/src/llm/: mod.rs
cathedral-cse/src/moe/: experts.rs  orchestrator.rs
cathedral-cse/src/mtp/: mod.rs  predictor.rs
cathedral-cse/src/sahoo/: mod.rs  plus.rs
cathedral-cse/src/thinking/: engine.rs  mod.rs
cathedral-dcops/: Cargo.toml  init_crates.sh
cathedral-dcops/benches/: persistence_bench.rs
cathedral-dcops/crates/cathedral-agent-capacity/: Cargo.toml
cathedral-dcops/migrations/: 20260622000000_initial.sql  20260622000001_down.sql
crates/arkhe-kernel/: Cargo.toml
crates/arkhe-wormgraph/: Cargo.toml
crates/cathedral-agents/: Cargo.toml
crates/cathedral-cli/: Cargo.toml
crates/cathedral-plurality/: Cargo.toml
crates/cathedral-pqc/: Cargo.toml
crates/cathedral-relay-adapter/: Cargo.toml
crates/cathedral-taproot-bridge/: Cargo.toml  build.rs
crates/safe-core-fhe/: Cargo.toml
safe-core/: .pre-commit-config.yaml  Cargo.toml  deny.toml
safe-core/.github/: labeler.yml
safe-core/benches/: benchmark.rs
safe-core/docs/: onboarding.md
safe-core/scripts/: ci-local-check.sh  fix-unwrap.sh  setup-precommit.sh
(+683 files in other folders)
