[package]
name = "cathedral-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
prost-types = "0.13.5"

[build-dependencies]
tonic-build = "0.12"
