[workspace]
name = "safe-core"
version = "0.1.0"
resolver = "3"
members = [
    "crates/safe-core-model-runtime",
    "crates/safe-core-parallax-bridge",
    "crates/safe-core-core",
    "crates/safe-core-policy",
    "crates/safe-core-dyn-signature",
    "crates/safe-core-hash-blake3",
    "crates/safe-core-hw-yubihsm",
    "crates/safe-core-merkle-evaluation",
    "crates/safe-core-persistence-rocksdb",
    "crates/safe-core-reactive-governance",
    "crates/safe-core-tpm-bridge",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Arkhe(n) Research Group"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkhe-research/safe-core"
rust-version = "1.85.0"  # MSRV

[workspace.dependencies]
tonic-build = "0.12"
prost = "0.13"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
rmcp = { version = "0.1.4", features = ["server", "transport-io"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hex = "0.4"
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Criptografia
blake3 = "1.5"
sha3 = "0.10"
kyberlib = "0.0.7"                    # ML-KEM-768 FIPS 203
#lattice-safe-threshold-ml-dsa = { git = "https://github.com/lattice-safe/threshold-ml-dsa" }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = "1.0"                    # Binary serialization (no_std compatible)

# Async
tokio = { version = "1.40", features = ["full"] }

# Logging / Tracing
tracing = "0.1"

# Erros
thiserror = "1.0"
anyhow = "1.0"

# Testes
mockall = "0.13"
proptest = "1.5"

# Verificação formal (dev-dependencies)
kani = { git = "https://github.com/model-checking/kani" }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 0
