[package]
name = "arkhe-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
futures = "0.3"
rand = "0.8"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
wasmtime = "14.0"
