[package]
name = "arkhe-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
python = ["pyo3"]
