[package]
name = "arkhe-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
rand = "0.8"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
ethers = { version = "2.0.14", features = ["rustls"] }
sha2 = "0.11.0"
hex = "0.4.3"

[features]
python = ["pyo3"]
