[package]
name = "cathedral-cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { workspace = true }
