[package]
name = "cathedral-plurality"
version = "2.0.0"
edition = "2021"
rust-version = "1.94"
authors = ["Cathedral ARKHE Architects <architect@arkhe.network>"]
license = "Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-os"
description = "Integração com Plurality Network (MCP + buckets)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls"] }
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"

[dev-dependencies]
mockito = "1.0"
