[package]
name = "cathedral-pqc"
version = "2.0.0"
edition = "2021"
rust-version = "1.94"
authors = ["Cathedral ARKHE Architects <architect@arkhe.network>"]
license = "Apache-2.0"
repository = "https://github.com/cathedral-arkhe/cathedral-os"
description = "Post-Quantum Cryptography for Cathedral-OS (FIPS 203-205)"

[dependencies]



ed25519-dalek = "2.1"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
thiserror = "2.0"
rand = "0.8"
getrandom = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
