[package]
name = "cathedral-agi"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
cathedral-scheduler = { path = "../cathedral-scheduler" }
cathedral-episodic = { path = "../cathedral-episodic" }
cathedral-tee = { path = "../cathedral-tee" }
cathedral-fallback = { path = "../cathedral-fallback" }
cathedral-lc3-vm = { path = "../cathedral-lc3-vm" }
