[package]
name = "cathedral-bridge"
version = "1.0.0"
edition = "2021"

[dependencies]
tonic = "0.10"
tracing = "0.1"
cathedral-zk-risc0 = { path = "../cathedral-zk-risc0" }
cathedral-zk-circuits = { path = "../cathedral-zk-circuits" }
cathedral-wormgraph = { path = "../cathedral-wormgraph" }
cathedral-nostr = { path = "../cathedral-nostr" }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
blake3 = "1.5"
nostr-sdk = "0.33.0"
tokio = { version = "1.0", features = ["full"] }
