[package]
name = "cathedral-fallback"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
cathedral-lc3-vm = { path = "../cathedral-lc3-vm" }
cathedral-scheduler = { path = "../cathedral-scheduler" }
