[package]
name = "cathedral-scheduler"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
