[package]
name = "cathedral-api"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
cathedral-wormgraph = { workspace = true }
cathedral-self-improve = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
