[package]
name = "cathedral-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
pqcrypto-dilithium = { workspace = true, optional = true }

[features]
mldsa = ["dep:pqcrypto-dilithium"]
