[package]
name = "cathedral-identity"
version = "1.0.0"
edition = "2021"

[dependencies]
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
pqcrypto-dilithium = { workspace = true, optional = true }

[features]
mldsa = ["dep:pqcrypto-dilithium"]
