[package]
name = "arkhe-mcp"
version = "0.4.0"
edition = "2021"
authors = ["Cathedral ARKHE Architects <arkhe@cathedral.dev>"]
description = "MCP Bridge for Cathedral ARKHE — Plurality Network integration"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
sha2 = "0.10"
axum = "0.7"
hex = "0.4"
rand = "0.8"
arkhe-core = { path = "../arkhe-core" }
nip44 = { path = "../nip44" }
